# gldojo

./: 01-contents.md  02-notes.md  CMakeLists.txt  Doxyfile  README.md  _config.yml  glsb6.md  index-cb.md  index-sb.md  index.md  index2-chapters.md
_includes/: head.html
_includes/share/: facebook.html  twitter.html
_layouts/: default.html  post.html
_posts/: 2015-01-01-preparation.md  2015-02-01-chapter1.md  2015-02-01-chapter3.md  2015-02-01-chapter4.md  2015-02-01-chapter5.md  2015-02-01-chapter8.md  2015-02-01-chapter9.md  2015-02-02-chapter10.md  2015-02-02-chapter11.md  2015-02-02-chapter13.md  2015-02-06-relink.md  2015-02-08-chap05a.md  2015-02-08-chap05b.md  2015-02-08-chap05c.md  2015-02-08-chap05d.md  2015-02-08-chap05e.md  2015-02-08-chap05f.md
_posts/00/: 2015-01-01-preparation.md  2015-01-02-repository.md  2015-02-09-glfw.md
_posts/02/: 2015-02-01-main02.md
_posts/05/: 2015-02-01-main05.md  2015-02-08-a.md  2015-02-08-b.md  2015-02-08-c.md  2015-02-08-d.md  2015-02-08-e.md  2015-02-08-f.md  2015-02-09-f1.md  2015-02-09-g.md  f.vimeo
_posts/06/: 2015-02-01-main06.md
_posts/07/: 2015-02-01-main07.md
_posts/12/: 2015-02-02-main12.md
_posts/cb01/: 2015-01-01-main01.md
_posts/cb02/: 2015-01-01-main02.md
_posts/cb03/: 2015-01-01-main03.md
_posts/cb04/: 2015-01-01-main04.md
_posts/cb05/: 2015-01-01-main05.md
_posts/cb06/: 2015-01-01-main06.md
_posts/cb07/: 2015-01-01-main07.md
_posts/cb08/: 2015-01-01-main08.md
_posts/cb09/: 2015-01-01-main09.md
_posts/cb10/: 2015-01-01-main10.md
_posts/sb00/: 2015-01-01-preparation.md  2015-01-02-repository.md  2015-02-09-mathjax.md  2015-05-15-mingw.md  2015-06-06-msys2.md
_posts/sb01/: 2015-01-01-main01.md
_posts/sb02/: 2015-01-01-main02.md
_posts/sb03/: 2015-01-01-main03.md
_posts/sb04/: 2015-01-01-main04.md
_posts/sb05/: 2015-01-01-main05.md  2015-02-08-a.md  2015-02-08-b.md  2015-02-08-c.md  2015-02-08-d.md  2015-02-08-e.md  2015-02-08-f.md  2015-02-09-f1.md  2015-02-09-g.md  c.vimeo  f1.vimeo
_posts/sb06/: 2015-01-01-main06.md
_posts/sb07/: 2015-01-01-main07.md
_posts/sb08/: 2015-01-01-main08.md
_posts/sb09/: 2015-01-01-main09.md
_posts/sb10/: 2015-01-01-main10.md
_posts/sb11/: 2015-01-01-main11.md
_posts/sb12/: 2015-01-01-main12.md
_posts/sb13/: 2015-01-01-main13.md
_posts/sb14/: 2015-01-01-main14.md
_site/: feed.xml  glsb6.html  index.html
_site/about/: index.html
_site/css/: main.css
_site/img/org/: gen
_site/jekyll/update/2015/02/06/: welcome-to-jekyll.html
_site/test/2015/02/06/: relink.html
cb/: CMakeLists.txt  cookbookogl.h  glslprogram.cpp  glslprogram.h  vboplane.cpp
cb00/: bmpreader.cpp  drawable.h  tgaio.cpp  vbosphere.cpp
cb01/: CMakeLists.txt  cb01.fs  cb01.vs  cb01a.cpp  cb01b.cpp  cb01c.cpp  cb01d.cpp  cb01d.fs  cb01e.cpp  cb01e.fs  cb01e.vs
cb02/: CMakeLists.txt  cb02a-3d.cpp  cb02a.cpp  cb02a.fs  cb02a.js  cb02a.json  cb02a.shaders  cb02a1.cpp  cb02a1.js  cb02a2.cpp  cb02a2.js  cb02a2.shaders  cb02b.cpp  cb02b.js  cb02b.json  cb02b.shaders  cb02b.vs  cb02c.cpp  cb02c.fs  cb02c.js  cb02c.json  cb02c.shaders
css/: realistic.css  style.css
hyper3/: CMakeLists.txt
include/: sngl.hpp  snshader.hpp
kw/: CMakeLists.txt  kw1.cpp  kw1.fs  kw1.js  kw1.vs  kw2-debug.tes  kw2.cpp  kw2.fs  kw2.js  kw2.tcs  kw2.tes  kw2.vs  kw3.cpp  kw3.js  kw3.shaders  kw3.tcs  kw3.vs  kw4.cpp  kw4.js  kw4.shaders  kw5.cpp  kw5.js  kw6.cpp  kw6.js  kw6.shaders  kw7.cpp  kw7.js  kw7.shaders  kw8.cpp  kw8.js  kw8.shaders
media/: .gitignore
media/shaders/: chap02c.fs  chap02c.vs  chap03a.fs  chap03b.fs  chap03b.vs  chap03c.fs  chap03c.vs  chap03d1.vs  chap03e.fs  chap03e.gs  chap03e.vs  chap03g.fs  chap03g.tes  chap03g.vs  chap05a.fs  chap05b.fs  chap05d.vs  chap05e1.vs  chap05e2.vs  chap05f.fs  chap05f.vs  chap05g.vs
ref/: vars.cs  vars.fs  vars.gs  vars.tcs  vars.tes  vars.vs
sb/: sb02a.cpp  sb02bx.cpp  sb02c.cpp  sb02cx.cpp  sb03a.cpp  sb03b.cpp  sb03c.cpp  sb03d.cpp  sb03dx.cpp  sb03dx1.cpp  sb03e.cpp  sb03ex.cpp  sb03f.cpp  sb03g.cpp  sb04.cpp  sb05ax.cpp  sb05b.cpp  sb05bx.cpp  sb05c.cpp  sb05cx.cpp  sb05dx.cpp  sb05e.cpp  sb05f.cpp  sb05f1.cpp  sb05fx.cpp  sb05fx1.cpp  sb05g.cpp
sb02/: CMakeLists.txt  sb02c.cpp
sb03/: CMakeLists.txt  sb03a.cpp  sb03a.vs  sb03b.cpp  sb03c.cpp  sb03d.cpp  sb03d.fs  sb03d1.tcs  sb03d1.tes  sb03d1.vs  sb03dx1.cpp  sb03e.cpp  sb03e.geom  sb03f.cpp  sb03f.fs  sb03f.vs  sb03g.cpp  sb03g.fs  sb03g.gs  sb03g.tcs  sb03g.tes  sb03g.vs
sb04/: CMakeLists.txt
sb05/: CMakeLists.txt  sb05a.cpp  sb05a.vs  sb05b.cpp  sb05b.vs  sb05c.cpp  sb05d.cpp  sb05e.cpp  sb05f.cpp  sb05f1.cpp  sb05g.cpp
shaders/: sb03g.geom
shaders/cb01/: cb01d.vs
shaders/cb02/: cb02a.fs  cb02a.vs  cb02c.vs
shaders/sb03/: sb03d.tcs  sb03d1.tes
shaders/sb05/: sb05c.fs  sb05c.vs  sb05d.fs
sn/: CMakeLists.txt  Drawable.cpp  Drawable.hpp  Point.cpp  Point.hpp  PointGrid.cpp  PointGrid.hpp  Program.cpp  Program.hpp  RegularPolygon.cpp  RegularPolygon.hpp  Sphere.cpp  Sphere.hpp  Utility.cpp  Utility.hpp  Volume.cpp  Volume.hpp  sngl.cpp  sngl.hpp  snshader.cpp  snshader.hpp
sn/test/: app.cpp  glew.cpp  glfw.cpp  glm.cpp  glm_sample.cpp
spheres/: CMakeLists.txt  README.md  SG.cpp  SG.hpp  SGI2.shaders  SGP1.cpp  SGP1.hpp  SGP1.shaders  SGP2.cpp  SGP2.hpp  SGP2.shaders  SGP3.cpp  SGP3.hpp  SGP3.shaders  SGP4.cpp  SGP4.hpp  SGP4.shaders  SphereApp.cpp  p1.js  p2.js  p3.js  p4.js  sp01.js  sphere.cpp  sphere.js  sphere01.js  sphere02.js  spheres01.cpp
src/: chap02a.cpp  chap02b.cpp  chap02c.cpp  chap03a.cpp  chap03b.cpp  chap03c.cpp  chap03d.cpp  chap03d1.cpp  chap03e.cpp  chap03f.cpp  chap03g.cpp  chap04.cpp  chap05a.cpp  chap05b.cpp  chap05c.cpp  chap05d.cpp  chap05e.cpp  chap05f.cpp  chap05g.cpp  sngl.cpp  snshader.cpp
src/test/: app.cpp  glew.cpp  glfw.cpp  glm.cpp  glm1.cpp  glm_sample.cpp
test/: CMakeLists.txt  classname.cpp  config-test.js  config.cpp  json.cpp
tools/: build  edit  root  start
